--- a/_config.yml
+++ b/_config.yml
@@ -117,7 +117,7 @@ author:
   weibo            :
   xing             :
   youtube          : "https://www.youtube.com/channel/UCLQTZai_e6JmMf1Mr7ZG_Xw"
-  
+
 
 # Reading Files
 include:
@@ -253,6 +253,14 @@ defaults:
       layout: single
       author_profile: true
       read_time: true
-      comments: # true
+      comments: true
       share: true
       related: true
+
+  # _pages
+  - scope:
+      path: ""
+      type: pages
+    values:
+      layout: single
+      author_profile: true
