--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ description              : "Adaptação à Complexidade"
 url                      : "https://www.emergir.co"
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
-teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
+teaser                   : "/img/emergir_round.png"
 # breadcrumbs            : false # true, false (default)
 words_per_minute         : 200
 comments:
