--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "pt-BT"
+locale                   : "pt-BR"
 remote_theme             : "mmistakes/minimal-mistakes"
 title                    : "Emergir"
 title_separator          : "-"
