--- a/_config.yml
+++ b/_config.yml
@@ -98,7 +98,7 @@ author:
   codepen          :
   dribbble         :
   flickr           :
-  facebook         : "https://www.facebook.com/emergir.co/"
+  facebook         : "emergir.co"
   foursquare       :
   github           :
   gitlab           :
@@ -108,11 +108,11 @@ author:
   lastfm           :
   linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
   pinterest        :
-  soundcloud       : "https://soundcloud.com/user-123224365"
+  soundcloud       : "user-123224365"
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
   steam            : # "steamId" (the last part of your profile url, e.g. https://steamcommunity.com/id/steamId/)
   tumblr           :
-  twitter          : "https://twitter.com/emergir_co"
+  twitter          : "emergir_co"
   vine             :
   weibo            :
   xing             :
