--- a/_config.yml
+++ b/_config.yml
@@ -88,7 +88,7 @@ analytics:
 # Site Author
 author:
   name             : "Emergir"
-  avatar           : "/img/emergir_round.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/img/emergir.png" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
   bio              : "Adaptação à Complexidade"
   location         : # "Somewhere"
   email            : "emergir.co@gmail.com"
