--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,10 +4,14 @@ Danilo Vaz:
   name: "Danilo Vaz"
   uri: "https://dnllvrvz.github.io"
   email: "dnllvrvz@gmail.com"
-  bio: "Copy and paste creator. Complex systems geek. Commons lover. Open-source advocate. Aspiring designer. Human"
+  bio: "Criador Ctrl+C Ctrl+V. Geek de [Sistemas Complexos](https://www.youtube.com/watch?v=cf-YxC4GxIg&index=2&list=PLY3xJBJiGnL6jp3BtjRb8OnUbJ2RGjr-b). Apoiador das Commons. Defensor do Open-source. Designer aspirante. Humano"
   avatar: "img/portrait.jpg"
 
 Rádio Emergir:
   name: "Rádio Emergir"
   bio: "Explorações e conversas sobre inovações científicas, sociais e culturais que inspiram e criam um mundo de maior resiliência para a espécie humana e os sistemas dos quais ela faz parte."
   avatar: "img/radio.png"
+
+Amanda Alface:
+  name: "Amanda Alface"
+  bio: "Luz"
