--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Danilo Vaz:
   name: "Danilo Vaz"
   uri: "https://dnllvrvz.github.io"
   email: "dnllvrvz@gmail.com"
-  bio: "Criador Ctrl+C Ctrl+V. Geek de [Sistemas Complexos](https://www.youtube.com/watch?v=cf-YxC4GxIg&index=2&list=PLY3xJBJiGnL6jp3BtjRb8OnUbJ2RGjr-b). Apoiador das Commons. Defensor do Open-source. Designer aspirante. Humano"
+  bio: "Criador Ctrl+C Ctrl+V. Geek de Sistemas Complexos. Apoiador das Commons. Defensor do Open-source. Designer aspirante. Humano"
   avatar: "img/portrait.jpg"
 
 Rádio Emergir:
