--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -15,5 +15,5 @@ Rádio Emergir:
 Amanda Alface:
   name: "Amanda Pinheiro Alface"
   bio: "Estudante de economia e controladoria na FEA-RP/USP, terapeuta holística e co-criadora do mundo novo. Gosta de sonhar grande, comunicar e estar presente na transição, a serviço do amor."
-  avatar: "img/portrait.jpg"
+  avatar: "img/alface.jpg"
   facebook: "amanda.alface"
