--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -17,3 +17,4 @@ Amanda Alface:
   bio: "Estudante de economia e controladoria na FEA-RP/USP, terapeuta holística e co-criadora do mundo novo. Gosta de sonhar grande, comunicar e estar presente na transição, a serviço do amor."
   avatar: "img/alface.jpg"
   facebook: "amanda.alface"
+  instagram: "amandaalface"
