--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,5 @@
 # /_data/authors.yml
-Body Cohen:
+Boyd Cohen:
   name: "Boyd Derek Cohen"
   uri: "boydcohen.impress.ly"
   bio: "Ph.D. em Estratégia e Empreendedorismo pela Universidade do Colorado. Professor, pesquisador e participante de atividades de empreendedorismo sustentável em todo o mundo. Iniciou um número de empreendimentos sustentáveis em construção verde, TI verde e, mais recentemente, originação de carbono."
