--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -26,8 +26,8 @@ Amanda Alface:
   instagram: "amandaalface"
 
 Daniel Wahl:
-  name: "Daniel Christian Wahl"
-  bio: "Dr. Daniel C. Wahl, biologist, holistic scientist, PhD in design for sustainability - author of 'Designing Regenerative Cultures'."
+  name: "Dr. Daniel C. Wahl"
+  bio: "Dr. Daniel C. Wahl, biólogo, cientista holístico, PhD em design para sustentabilidade - autor de "Designing Regenerative Cultures"."
   uri: "https://medium.com/@designforsustainability"
   email: "designforsustainability@gmail.com"
   avatar: "img/autores/daniel.jpeg"
