--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -27,8 +27,8 @@ Amanda Alface:
   instagram   : "amandaalface"
 
 Daniel Wahl:
-  name        : "Dr. Daniel C. Wahl"
-  bio         : "Dr. Daniel C. Wahl, biólogo, cientista holístico, PhD em design para sustentabilidade - autor de "Designing Regenerative Cultures"."
+  name        : "Daniel C. Wahl"
+  bio         : "Biólogo, cientista holístico, PhD em design para sustentabilidade - autor de "Designing Regenerative Cultures"."
   uri         : "https://medium.com/@designforsustainability"
   email       : "designforsustainability@gmail.com"
   avatar      : "img/autores/daniel.jpeg"
