--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -32,3 +32,10 @@ Daniel Wahl:
   uri         : "https://medium.com/@designforsustainability"
   email       : "designforsustainability@gmail.com"
   avatar      : "img/autores/daniel.jpeg"
+
+Felipe Tavares:
+  name        : "Felipe Tavares"
+  bio         : "Trabalho para conciliar o desenvolvimento social com a inteligência dos sistemas vivos. Acredito que a sustentabilidade começa com uma mudança de pensamento, e não de técnicas."
+  uri         : "https://desenvolvimentoregenerativo.com/"
+  email       :
+  avatar      : 
