--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -38,4 +38,4 @@ Felipe Tavares:
   bio         : "Trabalho para conciliar o desenvolvimento social com a inteligência dos sistemas vivos. Acredito que a sustentabilidade começa com uma mudança de pensamento, e não de técnicas."
   uri         : "https://desenvolvimentoregenerativo.com/"
   email       :
-  avatar      : 
+  avatar      : "img/autores/felipe.jpeg"
