--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,5 +9,9 @@ main:
     url: /cursos/
   - title: "Sobre"
     url: /sobre/
+  - title: Projects
+    subfolderitems:
+      - page: ISMAPA
+        url: /ismapa/
 #  - title: "Flocking"
 #    url: /flocking/
