--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -37,5 +37,5 @@ Felipe Tavares:
   name        : "Felipe Tavares"
   bio         : "Trabalho para conciliar o desenvolvimento social com a inteligência dos sistemas vivos. Acredito que a sustentabilidade começa com uma mudança de pensamento, e não de técnicas."
   uri         : "https://desenvolvimentoregenerativo.com/"
-  email       :
+  Facebook    : "felipetavares"
   avatar      : "img/autores/felipe.jpeg"
