linear to complex

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
 
-  - title: "<i class="fas fa-envelope"></i> Artigoos"
+  - title: "Artigos"
     url: "/categorias/artigos/"
   - title: "Rádio Emergir"
     url: "/categorias/podcast/"
