--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,12 @@
 # Authors
 
+Alessandra Bernardo da Silva:
+  name        : "Alessandra Bernardo da Silva"
+  bio         : "Engenheira de Produção, Facilitadora de Conversas tecendo Relações em Redes Humanas"
+  avatar      : "https://media.licdn.com/dms/image/C5603AQHEyNTDgpsqlA/profile-displayphoto-shrink_200_200/0?e=1535587200&v=beta&t=aYdk_KSXHbr8EK-Sj16twVB51GV5AkgK6GZFRz8o_iM"
+  facebook    : "https://www.facebook.com/alessandra.bernardo1"
+  linkedin    : "https://www.linkedin.com/in/alessandrabernardo"
+
 Boyd Cohen:
   name        : "Boyd Derek Cohen"
   uri         : "https://boydcohen.impress.ly"
