--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -3,7 +3,7 @@
 Alessandra Bernardo da Silva:
   name        : "Alessandra Bernardo da Silva"
   bio         : "Engenheira de Produção, Facilitadora de Conversas tecendo Relações em Redes Humanas"
-  avatar      : "https://media.licdn.com/dms/image/C5603AQHEyNTDgpsqlA/profile-displayphoto-shrink_200_200/0?e=1535587200&v=beta&t=aYdk_KSXHbr8EK-Sj16twVB51GV5AkgK6GZFRz8o_iM"
+  avatar      : "img/autores/alessandra.jpeg"
   facebook    : "https://www.facebook.com/alessandra.bernardo1"
   linkedin    : "https://www.linkedin.com/in/alessandrabernardo"
 
