--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,10 +2,11 @@
 
 Alessandra Bernardo da Silva:
   name        : "Alessandra Bernardo da Silva"
-  bio         : "Engenheira de Produção, Facilitadora de Conversas tecendo Relações em Redes Humanas"
+  bio         : "Conectar pessoas, conhecimentos e negócios emergentes que façam sentido e revelem o melhor de cada um, é um impulso natural. Gosto de brincar dizendo que estou criando uma nova profissão pra mim: uma e engenheira de pessoas, porque é para elas que olho seja qual for o sistema que eu visualize. Sou Engenheira de Produção de pensamento sistêmico voltado ao futuro, com especializações em gestão, gerenciamento de projetos, governança, consultoria de processos, facilitação de grupos e uma jornada de mais de 10 anos de desenvolvimento pessoal nas bases da antroposofia e mais recentemente do budismo. O que me move? boas conversas!"
   avatar      : "img/autores/alessandra.jpeg"
   facebook    : "https://www.facebook.com/alessandra.bernardo1"
   linkedin    : "https://www.linkedin.com/in/alessandrabernardo"
+  instagram   : "https://www.instagram.com/alessandra_bernardo1"
 
 Boyd Cohen:
   name        : "Boyd Derek Cohen"
