--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -4,7 +4,7 @@ Alessandra Bernardo da Silva:
   name        : "Alessandra Bernardo da Silva"
   bio         : "Conectar pessoas, conhecimentos e negócios emergentes que façam sentido e revelem o melhor de cada um, é um impulso natural. Gosto de brincar dizendo que estou criando uma nova profissão pra mim: engenheira de pessoas, porque é para elas que olho seja qual for o sistema que eu visualize. Sou Engenheira de Produção de pensamento sistêmico voltado ao futuro, com especializações em gestão, gerenciamento de projetos, governança, consultoria de processos, facilitação de grupos e uma jornada de mais de 10 anos de desenvolvimento pessoal nas bases da antroposofia e mais recentemente do budismo. O que me move? boas conversas!"
   avatar      : "img/autores/alessandra.jpeg"
-  facebook    : "https://www.facebook.com/alessandra.bernardo1"
+  facebook    : "alessandra.bernardo1"
   linkedin    : "https://www.linkedin.com/in/alessandrabernardo"
 
 Boyd Cohen:
@@ -47,3 +47,11 @@ Felipe Tavares:
   uri         : "https://desenvolvimentoregenerativo.com/"
   Facebook    : "felipetavares"
   avatar      : "img/autores/felipe.jpeg"
+
+Joe:
+  name        : "Joe Brewer"
+  bio         : "Eu sou um estrategista de mudança trabalhando em nome da humanidade, e também um pesquisador de complexidade, cientista cognitivo e evangelista do campo de Design Cultural."
+  uri         : "https://www.patreon.com/joe_brewer/memberships"
+  Twitter     : "cognitivepolicy"
+  avatar      : "img/autores/joe.jpeg"
+  Facebook    : "joe.brewer.31"
