--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -52,6 +52,6 @@ Joe:
   name        : "Joe Brewer"
   bio         : "Eu sou um estrategista de mudança trabalhando em nome da humanidade, e também um pesquisador de complexidade, cientista cognitivo e evangelista do campo de Design Cultural."
   uri         : "https://www.patreon.com/joe_brewer/memberships"
-  Twitter     : "cognitivepolicy"
+  Twitter     : "https://twitter.com/cognitivepolicy"
+  Facebook    : "https://twitter.com/cognitivepolicy"
   avatar      : "img/autores/joe.jpeg"
-  Facebook    : "joe.brewer.31"
