--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,6 +1,8 @@
 # main links
 main:
 
+  - title: "1 Ano de emergir"
+    url: "https://www.emergir.co/1AnoEmergir/"
   - title: "Artigos"
     url: "/categorias/artigos/"
   - title: "Rádio Emergir"
