--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,7 @@
 # main links
 main:
 
-  - title: "1 Ano de emergir"
+  - title: "1 Ano de Emergir"
     url: "https://www.emergir.co/1AnoEmergir/"
   - title: "Artigos"
     url: "/categorias/artigos/"
