--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,5 +1,12 @@
 # Authors
 
+Gilbert Ross:
+  name        : "Gilbert Ross"
+  bio         : "Digital Content Alchemist - Pro Writer - Communications Expert"
+  uri         : "https://contentalchemy.weebly.com/"
+  avatar      : "https://contentalchemy.weebly.com/uploads/7/8/5/5/7855837/5711977.jpg?370"
+  email       : "gross39@gmail.com"
+
 Alessandra Bernardo da Silva:
   name        : "Alessandra Bernardo da Silva"
   bio         : "Conectar pessoas, conhecimentos e negócios emergentes que façam sentido e revelem o melhor de cada um, é um impulso natural. Gosto de brincar dizendo que estou criando uma nova profissão pra mim: engenheira de pessoas, porque é para elas que olho seja qual for o sistema que eu visualize. Sou Engenheira de Produção de pensamento sistêmico voltado ao futuro, com especializações em gestão, gerenciamento de projetos, governança, consultoria de processos, facilitação de grupos e uma jornada de mais de 10 anos de desenvolvimento pessoal nas bases da antroposofia e mais recentemente do budismo. O que me move? boas conversas!"
