--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,6 +7,8 @@ main:
     url: "/categorias/artigos/"
   - title: "Rádio Emergir"
     url: "https://anchor.fm/radio-emergir"
+  - title: "Mapeamentos"
+    url: "https://kumu.io/emergir"
   - title: "Vídeos"
     url: "https://www.youtube.com/channel/UCLQTZai_e6JmMf1Mr7ZG_Xw"
   - title: "Sobre"
